essentials/jarvis-system/orchestrator/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jarvis-orchestrator
spec:
  selector:
    run: jarvis-orchestrator
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
